# lex-cases

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
lex_cases/: __init__.py  __main__.py  indexer.py  retriever.py  tool.py
lex_cases/providers/: __init__.py  base.py  rechtsprechung_im_internet.py
tests/: conftest.py  test_indexer.py  test_integration.py  test_provider.py  test_retriever.py
