[project]
name = "lex-cases"
version = "0.1.0"
description = "Semantische Suche über deutsche Gerichtsurteile"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.13",
    "pyarrow>=15.0",
    "requests>=2.31",
    "tenacity>=8.0",
    "lex-retriever>=0.1",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[project.scripts]
lex-cases = "lex_cases.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
