[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lex-cases"
version = "0.1.0"
description = "Agent-callable semantic search over German court decisions — pluggable providers, LanceDB backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["rag", "legal", "german-law", "lancedb", "semantic-search", "court-decisions"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lancedb>=0.13",
    "pyarrow>=15.0",
    "requests>=2.31",
    "tenacity>=8.0",
    "tqdm>=4.0",
    "lex-retriever>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/5drei1/lex-cases"
Issues = "https://github.com/5drei1/lex-cases/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lex_cases*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not requires_db and not integration'"
markers = [
    "requires_db: marks tests that require a populated lancedb",
    "integration: marks integration tests that call external services",
]
